sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:22: error: 'while' expected but identifier found.
i=0
^AlgCombSort:23: error: '(' expected but ';' found.
j=0
^AlgCombSort:25: error: illegal start of simple expression
}
^