sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart= getNombreValeurs()
var i=0
var j=0
do {

	if (ecart>1){
		ecart = (ecart.toDouble / 1.3).toInt
		
	}

while ( i+ecart<getNombreValeurs() ) {
	if(plusPetit(i+ecart,i)==true) {
		echange(i,i+ecart)
		i=i+1
		j=j+1
	}
}

}
i=0
j=0
while(ecart>1 )
}
